fixed crouch anim

--- a/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/gdwGameYear3 5.3 - 2 5.3 5.3/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -379,7 +379,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.750475168
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Person/Apri_2nd_Person
+ContentBrowserDrawer.SelectedPaths=/Game/Person
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -465,7 +465,7 @@ LastLevel=/Game/Maps/Level1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 FbxImportUI="\"Object\" "
 SkeletalMeshComponent="\"Object\" "
 SkinnedMeshComponent="\"Object\" "
@@ -518,7 +518,7 @@ PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
 AssetViewerSettings="\"Object\" \"Object.Settings.Profiles.Profiles[0].PostProcessingSettings\" "
 AnimSequence="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
 AnimSequenceBase="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
-AnimationAsset="\"Object\" \"Object.Animation.PlatformTargetFrameRate\" \"Object.ImportSettings.AssetImportData.Object.ImportSettings.MaterialCurveSuffixes\" \"Object.ImportSettings.AssetImportData.Object.Transform.ImportRotation\" "
+AnimationAsset="\"Object\" "
 SkeletalMesh="\"Object\" "
 SkinnedAsset="\"Object\" "
 LODInfoUILayout="\"Object\" "
@@ -877,21 +877,21 @@ Anim_Blueprint_April2nd_C="\"Object\" "
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -907,8 +907,7 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=MaterialEditor
-OpenAssetsAtExit=/Game/BluePrints/AI_Enemy.AI_Enemy
-OpenAssetsAtExit=/Game/BluePrints/BP_EnemyAI.BP_EnemyAI
+OpenAssetsAtExit=/Game/Person/Apri_2nd_Person/CrouchWalkingApril2nd.CrouchWalkingApril2nd
 
 [DetailCategories]
 FbxImportUI.Mesh=True
@@ -4752,21 +4751,21 @@ MRUItem2=/Game/Maps/EndingCinematic
 MRUItem3=/Game/Maps/Cinematic
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BluePrints/BP_EnemyAI
-MRUItem1=/Game/BluePrints/AI_Enemy
-MRUItem2=/Game/Maps/Level1
-MRUItem3=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBackL
-MRUItem4=/Game/Person/Apri_2nd_Person/Anim_Blueprint_April2nd
-MRUItem5=/Game/Person/Apri_2nd_Person/April2nd_Blend_Final
-MRUItem6=/Game/Person/lowwalk/Final_Anim
-MRUItem7=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFrontLow
-MRUItem8=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkL
-MRUItem9=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFrontR
-MRUItem10=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFront
-MRUItem11=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBackR
-MRUItem12=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBack
-MRUItem13=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkBack
-MRUItem14=/Game/Person/Apri_2nd_Person/CrouchWalkingApril2nd
+MRUItem0=/Game/Maps/Level1
+MRUItem1=/Game/Person/Apri_2nd_Person/CrouchWalkingApril2nd
+MRUItem2=/Game/BluePrints/BP_EnemyAI
+MRUItem3=/Game/BluePrints/AI_Enemy
+MRUItem4=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBackL
+MRUItem5=/Game/Person/Apri_2nd_Person/Anim_Blueprint_April2nd
+MRUItem6=/Game/Person/Apri_2nd_Person/April2nd_Blend_Final
+MRUItem7=/Game/Person/lowwalk/Final_Anim
+MRUItem8=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFrontLow
+MRUItem9=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkL
+MRUItem10=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFrontR
+MRUItem11=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFront
+MRUItem12=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBackR
+MRUItem13=/Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBack
+MRUItem14=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkBack
 MRUItem15=/Game/Person/lowwalk/RetryPersonMar25_Anim_root_WalkBackLow
 MRUItem16=/Game/Person/TESTINGBOI_Anim_BODYbONES_WalkFront
 MRUItem17=/Game/Person/lowwalk/Crouch_Walk_Blend
@@ -4788,7 +4787,7 @@ ChangeVariableType_Warning=False
 DeleteConfirmationVariable_Warning=False
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=MapCheck
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
@@ -5019,6 +5018,7 @@ LastLogListing=PIE
 /Game/Person/Apri_2nd_Person/Anim_Blueprint_April2nd.Anim_Blueprint_April2nd=1
 /Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkFrontLow.April2Person3_Anim_root_WalkFrontLow=1
 /Game/Person/Apri_2nd_Person/April2Person3_Anim_root_WalkBackL.April2Person3_Anim_root_WalkBackL=1
+/Game/Person/Apri_2nd_Person/CrouchWalkingApril2nd.CrouchWalkingApril2nd=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
